# bikefinder-rag

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  RETOUR_CRITIQUE.md  docker-compose.yml  eval_retrieval_report.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-commit.sh
data/2000s/: forums_done.txt  threads_done.txt
data/century/: forums_done.txt
data/demo/: comments.jsonl  motorcycles.jsonl
data/motoplanete/: fiche_urls.txt  prices.jsonl  urls_done.txt
data/pilot/: comments.jsonl  motorcycles.jsonl
deploy/: Dockerfile  entrypoint.sh  push_space.sh  space-README.md  static-space-README.md
deploy/static-space/: index.html
docs/: index.html  methode-sans-langchain.html  pipeline-et-evaluation.html  preuve-retrieval.html
eval_results/: README.md
eval_results/constraints/: README.md  constraints_mistral-small3.2.json
eval_results/prices/: audit_report.json  audit_sample.md
eval_results/ragas/: README.md  ragas_results.json  ragas_results_qwen-judge.json
eval_results/retrieval/: README.md  retrieval_report.json
eval_results/trajectory/: README.md  trajectory_mistral-small.json  trajectory_mistral-small3.2.json
scripts/: audit_prices.py  chat_cli.py  coverage_dashboard.py  eval_constraints.py  eval_retrieval.py  eval_tool_trajectory.py  load_db.py  load_motoplanete_prices.py  load_nhtsa_recalls.py  load_used_prices.py  run_demo_scrape.py  run_pilot_scrape.py  scrape_motoplanete_prices.py
src/bikefinder_rag/: app.py  matching.py
tests/: test_categories.py  test_detail_scraper.py
(+19 files in other folders)
