[project]
name = "bikefinder-rag"
version = "0.1.0"
description = "Agentic RAG over motorcycle specs and owner reviews, scraped from bikez.com"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "anthropic>=0.40",
    "sentence-transformers>=3.3",
    "gradio>=5.9",
    "ragas>=0.4",
    # ragas 0.4.3 still imports langchain_community.chat_models.vertexai,
    # which langchain-community 0.4.2 removed — pin until ragas catches up.
    "langchain-community==0.4.1",
    # Local judge for the eval (dedicated package; the community ChatOllama
    # is deprecated and warns on every run).
    "langchain-ollama>=1.1",
    "datasets>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
where = ["src"]
